# mitchell-agentic-sprint

./: .gitignore  CHANGELOG.md  README.md  _config.yml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
commands/: sprint-continue.md  sprint-council.md  sprint-loopback.md  sprint-setup.md  sprint-start.md  sprint-step-2.md  sprint-step-3.md  sprint-step-4.md  sprint-step-5.md  sprint-step-6.md
docs/adrs/: ADR-001-Enhanced-ADR-Format.md  ADR-002-Build-Tier-Moderate-Plus-NotebookLM.md  ADR-003-Sibling-Plugin-Shape.md  ADR-004-Mini-Council-Skills.md  ADR-005-Sprint-State-Schema.md  ADR-006-NotebookLM-MCP-Integration.md  ADR-007-Step-Gate-Enforcement.md  ADR-008-Anti-Sycophancy-Approach.md  ADR-009-Markdown-First-Artifacts.md  ADR-010-TDD-Scope.md  ADR-011-Branch-Strategy.md  ADR-012-Python-And-Pytest-For-Helpers.md
docs/concept/: concept.md
docs/examples/: worked-example-1-vertical-saas.md  worked-example-2-prosumer.md  worked-example-3-loopback.md
docs/research/: RECOMMENDATION.md  build-options.md  gap-analysis.md  research-plan.md
docs/templates/: investor-deck.md  outreach-plan.md  sales-deck.md
helpers/: __init__.py  interview_validator.py  notebooklm.py  saturation.py  sprint_state.py
profile-packs/mitchell-agentic-sprint/: gandalf.md
skills/churned-customer-agent/: SKILL.md
skills/competitor-founder-agent/: SKILL.md
skills/future-self-agent/: SKILL.md
skills/grumpy-pm-agent/: SKILL.md
tests/: test_interview_validator.py  test_notebooklm.py  test_saturation.py  test_sprint_state.py
(+9 files in other folders)
